kubernetes/apps/test/network/envoy-gateway/observability.yaml
---
# yaml-language-server: $schema=https://schemas.sstr.dev/monitoring.coreos.com/podmonitor_v1.json
apiVersion: monitoring.coreos.com/v1
kind: PodMonitor
metadata:
  name: envoy
spec:
  jobLabel: envoy-proxy
  namespaceSelector:
    matchNames:
      - network
  podMetricsEndpoints:
    - port: metrics
      path: /stats/prometheus
      honorLabels: true
  selector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/name: envoy
---
# yaml-language-server: $schema=https://schemas.sstr.dev/monitoring.coreos.com/servicemonitor_v1.json
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: envoy-gateway
spec:
  endpoints:
    - port: metrics
      path: /metrics
      honorLabels: true
  jobLabel: envoy-gateway
  namespaceSelector:
    matchNames:
      - network
  selector:
    matchLabels:
      control-plane: envoy-gateway
